# pelican-json-ld-graph

./: .gitignore  MANIFEST.in  README.md  __init__.py  generator.py  mappings.json  pyproject.toml  utils.py
pelican_json_ld_graph/: generator.py  mappings.json  utils.py
